# uni_CV

./: .gitignore
Lab0/: CMakeLists.txt  task2.cpp  task4.cpp  task5.cpp
Lab1/: CMakeLists.txt  task1.cpp  task3.cpp
Lab2/: CMakeLists.txt  ImageFilters.cpp  ImageFilters.h  reportLab2.tex  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp
Lab3/: CMakeLists.txt  reportLab3.tex  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp
Lab4/: CMakeLists.txt  reportLab4.tex  task1.cpp  task2.cpp  task3.cpp  task4.cpp
Lab5/: CMakeLists.txt  task1.cpp
Lab6/: CMakeLists.txt
Lab6/include/: matchers.h
Lab6/src/: matchers.cpp  task1.cpp
Lab7/: CMakeLists.txt
Lab7/include/: match.h
Lab7/src/: match.cpp  task1.cpp
Lab8/: CMakeLists.txt
Lab8/include/: cameraCalibration.h  utils.h
Lab8/src/: cameraCalibration.cpp  task1.cpp  test.cpp  utils.cpp
helloWorld/: CMakeLists.txt  main.cpp
